FEVM adoptation and integration tests refactoring
