# src/internal/api/gateway/docs/swagger.json
@@ -14,7 +14,7 @@
         },
         "version": "0.2"
     },
-    "host": "localhost:8085",
+    "host": "localhost:8080",
     "basePath": "/v1",
     "paths": {
         "/access/document": {
@@ -1426,73 +1426,6 @@
                     }
                 }
             },
-            "delete": {
-                "description": "https://specifications.openehr.org/releases/ITS-REST/latest/ehr.html#tag/DIRECTORY/operation/directory_delete\nThe existing latest {version_uid} of directory FOLDER resource (i.e. the {preceding_version_uid}) must be specified in the {If-Match} header.",
-                "tags": [
-                    "DIRECTORY"
-                ],
-                "summary": "Delete DIRECTORY folder associated with the EHR identified by ehr_id.",
-                "parameters": [
-                    {
-                        "type": "string",
-                        "description": "Bearer AccessToken",
-                        "name": "Authorization",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "UserId",
-                        "name": "AuthUserId",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "default": "\"return=minimal\"",
-                        "description": "Request header to indicate the preference over response details. The response will contain the entire resource when the Prefer header has a value of return=representation.",
-                        "name": "Prefer",
-                        "in": "header",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "EHR identifier taken from EHR.ehr_id.value. Example: 7d44b88c-4199-4bad-97dc-d78268e01398",
-                        "name": "ehr_id",
-                        "in": "path",
-                        "required": true
-                    },
-                    {
-                        "type": "string",
-                        "description": "Patient UserId",
-                        "name": "patient_id",
-                        "in": "query",
-                        "required": true
-                    }
-                ],
-                "responses": {
-                    "204": {
-                        "description": "Is returned when the resource identified by the request parameters has been (logically) deleted"
-                    },
-                    "400": {
-                        "description": "Is returned when the request has invalid content"
-                    },
-                    "404": {
-                        "description": "Is returned when an EHR with {ehr_id} does not exist, or DIRECTORY with that version is not exist"
-                    },
-                    "409": {
-                        "description": "Is returned when a resource with same identifier(s) already exists, or previous request still in progress"
-                    },
-                    "412": {
-                        "description": "Is returned when 'If-Match' request header doesn't match the latest version on the service side. Returns also latest 'version_uid' in the 'Location' and 'ETag' headers"
-                    },
-                    "500": {
-                        "description": "Is returned when an unexpected error occurs while processing a request"
-                    }
-                }
-            }
-        },
-        "/ehr/{ehr_id}/directory/": {
             "post": {
                 "description": "https://specifications.openehr.org/releases/ITS-REST/latest/ehr.html#tag/DIRECTORY/operation/directory_create",
                 "consumes": [
@@ -1558,6 +1491,71 @@
                     },
                     "409": {
                         "description": "Is returned when a resource with same identifier(s) already exists, or previous request still in progress"
+                    },
+                    "500": {
+                        "description": "Is returned when an unexpected error occurs while processing a request"
+                    }
+                }
+            },
+            "delete": {
+                "description": "https://specifications.openehr.org/releases/ITS-REST/latest/ehr.html#tag/DIRECTORY/operation/directory_delete\nThe existing latest {version_uid} of directory FOLDER resource (i.e. the {preceding_version_uid}) must be specified in the {If-Match} header.",
+                "tags": [
+                    "DIRECTORY"
+                ],
+                "summary": "Delete DIRECTORY folder associated with the EHR identified by ehr_id.",
+                "parameters": [
+                    {
+                        "type": "string",
+                        "description": "Bearer AccessToken",
+                        "name": "Authorization",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "UserId",
+                        "name": "AuthUserId",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "default": "\"return=minimal\"",
+                        "description": "Request header to indicate the preference over response details. The response will contain the entire resource when the Prefer header has a value of return=representation.",
+                        "name": "Prefer",
+                        "in": "header",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "EHR identifier taken from EHR.ehr_id.value. Example: 7d44b88c-4199-4bad-97dc-d78268e01398",
+                        "name": "ehr_id",
+                        "in": "path",
+                        "required": true
+                    },
+                    {
+                        "type": "string",
+                        "description": "Patient UserId",
+                        "name": "patient_id",
+                        "in": "query",
+                        "required": true
+                    }
+                ],
+                "responses": {
+                    "204": {
+                        "description": "Is returned when the resource identified by the request parameters has been (logically) deleted"
+                    },
+                    "400": {
+                        "description": "Is returned when the request has invalid content"
+                    },
+                    "404": {
+                        "description": "Is returned when an EHR with {ehr_id} does not exist, or DIRECTORY with that version is not exist"
+                    },
+                    "409": {
+                        "description": "Is returned when a resource with same identifier(s) already exists, or previous request still in progress"
+                    },
+                    "412": {
+                        "description": "Is returned when 'If-Match' request header doesn't match the latest version on the service side. Returns also latest 'version_uid' in the 'Location' and 'ETag' headers"
                     },
                     "500": {
                         "description": "Is returned when an unexpected error occurs while processing a request"
